--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,12 @@
         <ImageButton
             android:id="@+id/userSettings"
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="80dp"
             android:layout_gravity="right"
             android:layout_marginBottom="10dp"
             android:onClick="gotoUserSettings"
             android:text="Settings"
-            android:src="@drawable/settingsgear"
+            android:src="@drawable/settingslogo"
             android:background="@null"
             android:scaleType="fitCenter"
             />
