--- a/app/src/main/res/layout/activity_new_journey.xml
+++ b/app/src/main/res/layout/activity_new_journey.xml
@@ -19,12 +19,12 @@
 
         <ImageButton
             android:id="@+id/homeButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
             android:text="Home"
             android:onClick="goHome"
             android:layout_marginBottom="20dp"
-            android:src="@drawable/home"
+            android:src="@drawable/homelogo"
             android:background="@null"
             android:scaleType="fitCenter"
             />
@@ -112,6 +112,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Journey!"
+        android:textColor="#1D422F"
+        android:textSize="20sp"
+        android:padding="10dp"
+        android:background="#84e89f"
+        android:layout_marginBottom="20dp"
+        />
+
+    <Button
+        android:id="@+id/cancel"
+        android:onClick="cancelButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
         android:textColor="#1D422F"
         android:textSize="20sp"
         android:padding="10dp"
