--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:text="Hello User!"
             android:textSize="20dp"
+            android:textStyle="bold"
             android:layout_gravity="center"
             android:id="@+id/welcomeUser"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +40,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="50dp"/>
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:layout_margin="40dp"
+            android:layout_gravity="center"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/stones"/>
     </LinearLayout>
 
 
