--- a/app/src/main/res/layout/journey_album_layout.xml
+++ b/app/src/main/res/layout/journey_album_layout.xml
@@ -8,7 +8,7 @@
     android:padding="20dp"
     android:layout_margin="20dp"
     android:gravity="center"
-    android:background="#B9F6C9"
+    android:background="@drawable/button_small_style"
     android:orientation="vertical">
 
         <TextView
