--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -77,6 +77,7 @@
                     android:id="@+id/radioOn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:buttonTint="#84C596"
                     android:text="Turn On Sensor"
                     android:textSize="20sp" />
                 <RadioButton
@@ -84,6 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Turn Off Sensor"
+                    android:buttonTint="#84C596"
                     android:checked="true"
                     android:textSize="20sp" />
 
@@ -100,12 +102,12 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/saveButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1D422F"
-            android:background="#84e89f"
+            android:background="@drawable/button_style"
             android:onClick="saveData"
             android:text="Save Data" />
 
@@ -119,12 +121,12 @@
         android:textColor="#1D422F"
         android:orientation="vertical">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/backButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1D422F"
-            android:background="#84e89f"
+            android:background="@drawable/button2_style"
             android:onClick="goBack"
             android:text="Cancel" />
 
