--- a/app/src/main/res/layout/activity_edit_journal_detail.xml
+++ b/app/src/main/res/layout/activity_edit_journal_detail.xml
@@ -5,53 +5,36 @@
     android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    android:layout_marginBottom="20dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
-        android:gravity="right"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/AlbumButton"
-            android:layout_width="70dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="goAlbum"
-            android:src="@drawable/journeyalbumlogo"
-            android:background="@null"
-            android:scaleType="fitCenter"
-            android:textColor="#1D422F"
-            android:layout_marginRight="20dp"
-            />
-
-        <ImageButton
+        <Button
             android:id="@+id/homeButton"
-            android:layout_width="50dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:text="Home"
             android:onClick="goHome"
-            android:src="@drawable/homelogo"
-            android:background="@null"
-            android:scaleType="fitCenter"
-            />
-<!--        <ImageButton-->
-<!--            android:id="@+id/deleteButton"-->
-<!--            android:layout_width="50dp"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_marginBottom="20dp"-->
-<!--            android:onClick="deleteEntry"-->
-<!--            android:text="Delete Journey"-->
-<!--            android:textSize="12sp"-->
-<!--            android:textColor="#1D422F"-->
-<!--            android:src="@drawable/trashcan"-->
-<!--            android:background="@null"-->
-<!--            android:scaleType="fitCenter"-->
-<!--            />-->
+            android:textColor="#1D422F"
+            android:background="#B9F6C9"
+            android:layout_marginRight="10dp"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/AlbumButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="#84e89f"
+            android:onClick="goAlbum"
+            android:text="Journey Album"
+            android:textColor="#1D422F"
+            android:textSize="20sp" />
 
 
     </LinearLayout>
@@ -74,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="Name:"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -83,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="10dp"
                 android:hint="   Stanley Park Jog"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
 
         </LinearLayout>
         <LinearLayout
@@ -100,7 +83,7 @@
                 android:text="Location:"
                 android:id="@+id/journeyLocationTextView"
                 android:textStyle="bold"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:gravity="right" />
 
             <EditText
@@ -108,7 +91,7 @@
                 android:hint="   Stanley Park"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:paddingRight="10dp"/>
 
         </LinearLayout>
@@ -126,7 +109,7 @@
                 android:text="Date:"
                 android:id="@+id/journeyDateTextView"
                 android:textStyle="bold"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:gravity="right" />
 
             <EditText
@@ -134,7 +117,7 @@
                 android:hint="   MM/DD/YYYY"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:paddingRight="10dp"/>
 
         </LinearLayout>
@@ -152,7 +135,7 @@
                 android:text="Duration:"
                 android:id="@+id/journeyTimeTextView"
                 android:textStyle="bold"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:gravity="right" />
 
             <EditText
@@ -160,7 +143,7 @@
                 android:hint="   HH:MM:SS"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:paddingRight="10dp"/>
 
         </LinearLayout>
@@ -183,14 +166,14 @@
                 android:text="Notes:"
                 android:id="@+id/journeyNotesTextView"
                 android:textStyle="bold"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:layout_marginBottom="10dp"
                 android:gravity="right"/>
 
             <EditText
                 android:id="@+id/notesBoxTextView"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="106dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/textbox_style"
                 android:gravity="top"
@@ -208,39 +191,38 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/checklistButton"
-            android:onClick="viewChecklist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/button_small_style"
+            android:background="#84e89f"
             android:text="View Checklist"
-            android:layout_marginRight="10dp"
-            android:textSize="12sp"
+            android:layout_marginRight="5dp"
+            android:textSize="10sp"
             android:textColor="#1D422F" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/takePhotosButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/button_small_style"
+            android:layout_marginRight="5dp"
+            android:background="#84e89f"
             android:onClick="takePhotos"
             android:text="Take Photos"
-            android:textSize="12sp"
+            android:textSize="10sp"
             android:textColor="#1D422F" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/viewPhotosButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/button_small_style"
+            android:background="#84e89f"
             android:onClick="viewPhotos"
             android:text="View Photos"
-            android:textSize="12sp"
+            android:textSize="10sp"
             android:textColor="#1D422F" />
 
     </LinearLayout>
@@ -249,54 +231,18 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/saveButton"
             android:onClick="saveData"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_style"
-            android:paddingRight="30dp"
-            android:paddingLeft="30dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:text="Save Data"
-            android:gravity="center_horizontal"
+            android:background="#84e89f"
+            android:padding="10dp"
+            android:text="Save"
             android:textColor="#1D422F"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
-            android:textSize="18sp" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/deleteButton"
-            android:onClick="deleteEntry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button2_style"
-            android:paddingRight="30dp"
-            android:paddingLeft="30dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:text="Delete Entry"
-            android:gravity="center_horizontal"
-            android:textColor="#1D422F"
-            android:layout_marginBottom="10dp"
-            android:textSize="18sp" />
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/deleteButton"-->
-<!--            android:layout_width="60dp"-->
-<!--            android:layout_height="70dp"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            android:onClick="deleteEntry"-->
-<!--            android:text="Delete Journey"-->
-<!--            android:src="@drawable/deletelogo"-->
-<!--            android:background="@null"-->
-<!--            android:scaleType="fitCenter"-->
-<!--            />-->
-
+            android:textSize="20sp" />
 
 
     </LinearLayout>
