--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -22,8 +22,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:text="Settings"
-            android:textSize="26sp"
-            android:textStyle="bold"/>
+            android:textSize="25sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,17 +76,15 @@
                     android:id="@+id/radioOn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:buttonTint="#84C596"
                     android:text="Turn On Sensor"
-                    android:textSize="18sp" />
+                    android:textSize="20sp" />
                 <RadioButton
                     android:id="@+id/radioOff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Turn Off Sensor"
-                    android:buttonTint="#84C596"
                     android:checked="true"
-                    android:textSize="18sp" />
+                    android:textSize="20sp" />
 
             </RadioGroup>
 
@@ -102,14 +99,13 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/saveButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1D422F"
-            android:background="@drawable/button_style"
+            android:background="#84e89f"
             android:onClick="saveData"
-            android:textSize="18sp"
             android:text="Save Data" />
 
 
@@ -122,14 +118,13 @@
         android:textColor="#1D422F"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/backButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1D422F"
-            android:background="@drawable/button2_style"
+            android:background="#84e89f"
             android:onClick="goBack"
-            android:textSize="18sp"
             android:text="Cancel" />
 
 
