--- a/app/src/main/res/layout/activity_journey_album_recycler.xml
+++ b/app/src/main/res/layout/activity_journey_album_recycler.xml
@@ -13,19 +13,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_weight="0.1"
+        android:layout_weight="0.12"
+        android:gravity="right"
         android:orientation="vertical">
 
-        <Button
+        <ImageButton
             android:id="@+id/homeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:background="#84e89f"
-            android:onClick="goHome"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
             android:text="Home"
-            android:textColor="#1D422F"
-            android:textSize="20sp" />
+            android:onClick="goHome"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/homelogo"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            />
     </LinearLayout>
 
     <TextView
@@ -38,15 +40,13 @@
         android:paddingBottom="20dp"
         />
 
-<!--    <TextView-->
-<!--        android:id="@+id/emptyListTextView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:paddingBottom="20dp"-->
-<!--        android:text="Your album is curre-->
-<!--        ntly empty"-->
-<!--        android:textSize="16sp"-->
-<!--        tools:visibility="gone" />-->
+    <TextView
+        android:id="@+id/emptyListTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        android:text="Your album is currently empty!"
+        android:textSize="16sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvItems"
