--- a/app/src/main/res/layout/activity_new_journey.xml
+++ b/app/src/main/res/layout/activity_new_journey.xml
@@ -14,18 +14,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
+        android:gravity="right"
         android:orientation="vertical">
 
-        <Button
+        <ImageButton
             android:id="@+id/homeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
             android:text="Home"
             android:onClick="goHome"
-            android:textColor="#1D422F"
-            android:background="#84e89f"
-            android:textSize="20sp" />
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/homelogo"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            />
+
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -103,16 +106,30 @@
         android:padding="10dp"
         android:gravity="top"
         android:textSize="18sp" />
-    <Button
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/startJourney"
         android:onClick="viewJourneyDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Journey!"
         android:textColor="#1D422F"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:padding="10dp"
-        android:background="#84e89f"
+        android:background="@drawable/button_style"
+        android:layout_marginBottom="20dp"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/cancel"
+        android:onClick="cancelButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:textColor="#1D422F"
+        android:textSize="18sp"
+        android:padding="10dp"
+        android:background="@drawable/button2_style"
         />
 
 
