--- a/app/src/main/res/layout/activity_new_journey_detail.xml
+++ b/app/src/main/res/layout/activity_new_journey_detail.xml
@@ -11,18 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="right">
 
-        <Button
+        <ImageButton
             android:id="@+id/homeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
             android:text="Home"
             android:onClick="goHome"
-            android:textColor="#1D422F"
-            android:background="#84e89f"
-            android:textSize="20sp" />
+            android:src="@drawable/homelogo"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            />
 
 
     </LinearLayout>
@@ -45,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="Name:"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -54,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="10dp"
                 android:hint="   Stanley Park Jog"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
         <LinearLayout
@@ -71,7 +72,7 @@
                 android:text="Location:"
                 android:id="@+id/journeyLocationTextView"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:gravity="right" />
 
             <EditText
@@ -79,7 +80,7 @@
                 android:hint="   Stanley Park"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:paddingRight="10dp"/>
 
         </LinearLayout>
@@ -97,7 +98,7 @@
                 android:text="Date:"
                 android:id="@+id/journeyDateTextView"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:gravity="right" />
 
             <EditText
@@ -105,7 +106,7 @@
                 android:hint="   MM/DD/YYYY"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:paddingRight="10dp"/>
 
         </LinearLayout>
@@ -123,7 +124,7 @@
                 android:text="Duration:"
                 android:id="@+id/journeyTimeTextView"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:gravity="right" />
 
             <EditText
@@ -131,7 +132,7 @@
                 android:hint="   HH:MM:SS"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:paddingRight="10dp"/>
 
         </LinearLayout>
@@ -154,7 +155,7 @@
                 android:text="Notes:"
                 android:id="@+id/journeyNotesTextView"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_marginBottom="10dp"
                 android:gravity="right"/>
 
@@ -179,38 +180,28 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/checklistButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="#84e89f"
-            android:text="View Checklist"
-            android:layout_marginRight="5dp"
-            android:textSize="10sp"
-            android:textColor="#1D422F" />
 
-        <Button
-            android:id="@+id/btnOpenCamera"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/takePhotosButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="5dp"
-            android:background="#84e89f"
-            android:onClick="openCamera"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/button_small_style"
+            android:onClick="takePhotos"
             android:text="Take Photos"
-            android:textSize="10sp"
+            android:textSize="14sp"
             android:textColor="#1D422F" />
 
-        <Button
-            android:id="@+id/btnDisplayPhoto"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/viewPhotosButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="#84e89f"
-            android:onClick="displayPhoto"
+            android:background="@drawable/button_small_style"
+            android:onClick="viewPhotos"
             android:text="View Photos"
-            android:textSize="10sp"
+            android:textSize="14sp"
             android:textColor="#1D422F" />
 
     </LinearLayout>
@@ -221,20 +212,18 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/saveButton"
             android:onClick="saveData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#84e89f"
+            android:background="@drawable/button_style"
             android:padding="10dp"
-            android:text="Save"
+            android:text="Save Entry"
             android:textColor="#1D422F"
             android:textSize="20sp" />
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
