--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -22,7 +22,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:text="Settings"
-            android:textSize="25sp" />
+            android:textSize="26sp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -76,15 +77,17 @@
                     android:id="@+id/radioOn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:buttonTint="#84C596"
                     android:text="Turn On Sensor"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
                 <RadioButton
                     android:id="@+id/radioOff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Turn Off Sensor"
+                    android:buttonTint="#84C596"
                     android:checked="true"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
             </RadioGroup>
 
@@ -99,13 +102,14 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/saveButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1D422F"
-            android:background="#84e89f"
+            android:background="@drawable/button_style"
             android:onClick="saveData"
+            android:textSize="18sp"
             android:text="Save Data" />
 
 
@@ -118,13 +122,14 @@
         android:textColor="#1D422F"
         android:orientation="vertical">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/backButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1D422F"
-            android:background="#84e89f"
+            android:background="@drawable/button2_style"
             android:onClick="goBack"
+            android:textSize="18sp"
             android:text="Cancel" />
 
 
